[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "csv2cmi"
dynamic = ["version"]
authors = [{name = "Klaus Rettinghaus"}]
description = "converts a table of letters into CMI format"
readme = {file = "README.md", content-type = "text/markdown"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["TEI", "CSV", "CMIF", "digital humanities", "correspondence"]

[tool.setuptools.dynamic]
version = {attr = "package.__version__"}