[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "csv2cmi"
dynamic = ["version"]
dependencies = [
    "lxml",
    "backports.strenum; python_version < '3.11'",
]
requires-python = ">= 3.8"
authors = [{name = "Klaus Rettinghaus"}]
description = "converts a table of letters into CMI format"
readme = {file = "README.md", content-type = "text/markdown"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["TEI", "CSV", "CMIF", "digital humanities", "correspondence"]

[tool.ruff]
line-length = 120

[tool.setuptools]
py-modules = ["csv2cmi"]

[tool.setuptools.dynamic]
version = {attr = "csv2cmi.__version__"}
